[package]
name = "rusty-journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.83"
structopt = "0.3.26"

[dependencies.chrono]
features = ["serde"] # used to serilize DataTime field.
version = "0.4.22"

[dependencies.serde]
features = ["derive"]
version = "1.0.143"